# bandofagents

./: .env.example  .gitignore  README.md  pyproject.toml  verify_setup.py
agents/: __init__.py  __main__.py  common.py  orchestrator.py  qa_strategist.py  release_coordinator.py  tech_writer.py
prompts/: orchestrator.md  qa_strategist.md  release_coordinator.md  tech_writer.md
scripts/: make_video.py  run_agent.sh
slides/: concat.txt  slides.md  slides.pptx
