[project]
name = "bandofagents"
version = "0.1.0"
description = "Multi-agent software delivery pipeline using Band SDK — Technical Writer, QA Strategist, and Release Coordinator"
requires-python = ">=3.11"
dependencies = [
    "band-sdk[langgraph]>=0.2.8",
    "langchain-openai>=0.3",
    "langchain-google-genai>=2.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100